--- a/style1.css
+++ b/style1.css
@@ -1,3 +1,19 @@
 body{
   background-color: lightcyan
 }
+
+h1 {
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+h3 {
+  font-size: 25px;
+}
+
+p {
+  font-size: 20px;
+}
